--- a/contents/03-generalities.qmd
+++ b/contents/03-generalities.qmd
@@ -21,7 +21,7 @@ format:
 
 * TD: [link](../td/03-generalities-td.qmd)
 
-* TP: [link](../td/03-generalities-tp.qmd)
+* TP: [link](../tp/03-generalities-tp.qmd)
 
 ## Sommaire
 
