--- a/contents/04-dimension.qmd
+++ b/contents/04-dimension.qmd
@@ -17,7 +17,7 @@ format:
 
 * TD: [link](../td/04-dimension-td.qmd)
 
-* TP: [link](../td/04-dimension-tp.qmd)
+* TP: [link](../tp/04-dimension-tp.qmd)
 
 ## Sommaire
 
